testsuite/tests/typecheck/should_fail/T19397E3.stderr

T19397E3.hs:1:1: error: [GHC-67120]
    The main IO action ‘foo’ is not defined in module ‘Main’
